--- a/index.html
+++ b/index.html
@@ -54,7 +54,43 @@
  </section> 
   <!--Parte elenco con cose da fare  -->
   <section>
-    
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la Tower of London&cross; </li>
+        <li>Visitare Greenwich&#10003; </li>
+        <li>Ascoltare un artista di strada a Covent Garden&#10003;</li>
+        <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+    </ul>
+    <hr>
   </section>
+  <!-- info utili -->
+  <section>
+    <h3>Info utili:</h3>
+    <ol>
+        <li>Numeri utili d'emergenza</li>
+           <ul>
+            <li><strong>999</strong>-Emergenza</li>
+            <li><strong>101</strong>-Numero polizia</li>
+            <li><strong>111</strong>-Numero assistenza medica</li>
+           </ul>
+        <li>Hotel</li>
+           <ul>
+            <li><strong>Nome hotel:</strong>Buckingham Palace</li>
+            <li><strong>Indirizzo hotel:</strong>Westminster,London SW1A 1AA, Regno Unito</li>
+           </ul>
+        <li>Aereo</li>
+           <ul>
+            <li><strong>Volo di Andata:</strong>Y1234X,ore 9.30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritirno</strong>Y1236X,ore 18.30 da London Heathrow</li>
+           </ul>
+    </ol>
+    <hr>
+  </section>
+  <!-- foto -->
+  <footer>
+    <h3>Foto</h3>
+    <img src="london-400x400-compressor_0.jpg" alt="error">
+    <img src="london 2.jpg" alt="error">
+</footer>
 </body>
 </html>
