--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Viaggio a Londra</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="elisabetta foto.jpg" size="16x16 24x24 32x32 48x48 64x64 128x128">
+    <link rel="icon" href="elisabetta foto.jpg" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
 </head>
 <body>
  <header>
